Fixed modal close button alignment and padding issue (#66)
Fixed modal close button alignment issue and made padding changes to match UI callout.

--- a/packages/terra-consumer-nav/src/components/nav-help/NavHelp.scss
+++ b/packages/terra-consumer-nav/src/components/nav-help/NavHelp.scss
@@ -62,8 +62,12 @@
     text-decoration: none;
   }
 
-  .item-text-padding {
-    padding-left: 10px;
+  .icon-text-padding {
+    padding-right: 10px;
+  }
+
+  .icon-text-padding:empty {
+    display: none;
   }
 
   .toggler-padding {
